--- a/public/inner-assets/css/style.css
+++ b/public/inner-assets/css/style.css
@@ -256,6 +256,21 @@ p:last-child{
 	margin-bottom: 0;
 }
 .font-red{color: red;}
+
+/* 16-jun-start */
+.Mui-focused{color: #7638ff !important;}
+.Mui-focused .MuiOutlinedInput-notchedOutline{border-color: #7638ff !important;}
+.feather{color: #7638ff !important;}
+.MuiInputLabel-root.MuiInputLabel-formControl{font-weight: 600 !important; color: #1B2559 !important;font-size: 0.9375rem !important;}
+.MuiPaper-root.MuiPaper-elevation{border-radius: 6px;box-shadow: 0px 4px 44px rgb(231 234 252 / 75%);border: 1px solid #F2ECFF;}
+.Mui-selected{background-color: rgb(118 56 255 / 9%) !important;}
+.Mui-checked{color: #7638ff !important;}
+.MuiMenuItem-root:hover{background-color: rgb(118 56 255 / 9%) !important;}
+.MuiOutlinedInput-notchedOutline{border: 1px solid #F7F8F9 !important;}
+.MuiListItemText-root span{font-size: 14px !important; color: #1B2559 !important; font-weight: 500 !important;}
+.MuiMenuItem-root span{padding: 0 !important;margin-right: 10px;}
+/* 16-jun-end */
+
 /*-----------------
 	2. Table
 -----------------------*/
@@ -521,6 +536,7 @@ table .badge {
 .feather {
     width: 18px;
     height: 18px;
+	color: rgb(118, 56, 255) !important;
 }
 .toggle_btn-two {
 	color: #fff;
