--- a/public/inner-assets/css/style.css
+++ b/public/inner-assets/css/style.css
@@ -3607,6 +3607,10 @@ table.table-inbox tbody tr.checked {
     min-width: 200px;
     padding: 10px 20px;
 }
+.error{
+	color: red;
+}
+
 
 /*-----------------
 	17. Content
